--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@propelauth/react": "^2.0.21",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "mui-file-input": "^4.0.4",
     "neurelo-sdk": "file:neurelo-sdk-typescript-cmt_fc25de.tgz",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
